client/comments: fix 1px jumping on edit preview

--- a/client/css/comment-control.styl
+++ b/client/css/comment-control.styl
@@ -32,23 +32,25 @@ $comment-border-color = #DDD
             border-bottom: 1px solid $comment-border-color
 
             nav.edit
-                padding: 0.33em 1em 0 1em
+                padding: 0.25em 1em 0 1em
+                line-height: 2em
                 ul
                     list-style-type: none
-                    margin: 0
+                    margin: -1px 0 -1px 0
                     padding: 0
                     li
                         display: inline-block
-                        margin: 0 0 -1px 0
+                        border: 1px solid transparent
                         a
-                            padding: 0.25em 1em
+                            padding: 0 1em
                         &.active
                             background: $window-color
                             border: 1px solid $comment-border-color
-                            border-bottom: none
+                            border-bottom: 1px solid $window-color
 
             nav.readonly
-                padding: 0.33em 1em
+                padding: 0 1em
+                line-height: 2.25em
 
             &:before
                 position: absolute
